syntax="proto3";
 
package proto;
 
option go_package="example.com/go-grpc-crud";
 
message Author{
    string author_id = 1;
    string author_name = 1;
    string gender = 1;
    string type_of_author = 1;
    string affiliation = 1;
    string email = 1;
}

message IP_Assets{
    string registration_number = 1;
    string title_of_work = 1;
    string type_of_document = 1;
    string class_of_work = 1;
    string date_of_creation = 1;
    string date_registered = 1;
    string campus = 1;
    string college = 1;
    string program = 1;
    string authors = 1;
}

message Publications{
    string publication_id = 1;
    string date_published = 1;
    string quartile = 1;
    string authors = 1;
    string department = 1;
    string college = 1;
    string campus = 1;
    string title_of_paper = 1;
    string type_of_publication = 1;
    string funding_source = 1;
    string number_of_citations = 1;
    string google_scholar_details = 1;
    string sdg_no = 1;
    string funding_type = 1;
    string nature_of_fundings = 1;
    string publisher = 1;
    string abstract = 1;
}

message User{
    int64 user_id = 1;
    string sr_code = 1;
    string email = 1;
    string password = 1;
    string account_type = 1;
    string user_contact = 1;
    string user_img = 1;
    string user_fname = 1;
    string user_lname = 1;
    string user_mname = 1;
}

message Movie {
   string id =1;
   string title =2;
   string genre =3;
}
 
message CreateMovieRequest {
   Movie movie = 1;
}
message CreateMovieResponse {
   Movie movie = 1;
}
message ReadMovieRequest{
   string id =1;
}
message ReadMovieResponse{
   Movie movie =1;
}
message ReadMoviesRequest{
 
}
message ReadMoviesResponse{
   repeated Movie movies =1;
}
message UpdateMovieRequest{
   Movie movie =1;
}
message UpdateMovieResponse{
   Movie movie =1;
}
message DeleteMovieRequest{
   string id =1;
}
message DeleteMovieResponse{
   bool success =1;
}
 
 
service MovieService {
   rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse) {}
   rpc GetMovie(ReadMovieRequest) returns (ReadMovieResponse) {}
   rpc GetMovies(ReadMoviesRequest) returns (ReadMoviesResponse) {}
   rpc UpdateMovie(UpdateMovieRequest) returns (UpdateMovieResponse) {}
   rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse) {}
}
